Update GitHub Action requirements

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,5 @@ markers =
     critical: marks tests as critical
     integration: marks tests as integration tests
     mock: marks tests that use mocking
+    error_handling: error handling tests
+    parametrize: parameterized tests
