--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -10,21 +10,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov
+        pip install -r requirements.txt
 
-    - name: Run tests with coverage
+    - name: Run tests
       run: |
-        pytest --cov=calculator tests/ --cov-report=xml
-
-    - name: Upload coverage
-      uses: codecov/codecov-action@v2
+        pytest --cov=calculator tests/ -v
